[gd_scene load_steps=8 format=3 uid="uid://dbsg3f64fdm8x"]

[ext_resource type="Script" path="res://Characters/character.gd" id="1_fklvr"]
[ext_resource type="Texture2D" uid="uid://b4gx7cmnh1oje" path="res://Textures/Characters/Andromeda.PNG" id="2_vcs0c"]
[ext_resource type="PackedScene" uid="uid://bs7yfid3k5idm" path="res://UI/tooltip.tscn" id="3_g2pkx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rqf6"]
size = Vector2(6.65383, 8.09291)

[sub_resource type="Animation" id="Animation_bwmyy"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.62451, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8x0gu"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.594604, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1gu6"]
_data = {
"fade_in": SubResource("Animation_bwmyy"),
"fade_out": SubResource("Animation_8x0gu")
}

[node name="Character" type="Node2D"]
script = ExtResource("1_fklvr")
character_name = "Character Name"

[node name="CharacterImage" type="Sprite2D" parent="."]
texture = ExtResource("2_vcs0c")

[node name="ToolTip" parent="." instance=ExtResource("3_g2pkx")]
offset_left = -248.0
offset_top = -820.0
offset_right = -101.0
offset_bottom = -778.0
scale = Vector2(3.47598, 3.11587)

[node name="Interaction" type="Area2D" parent="."]
scale = Vector2(77.103, 171.989)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
position = Vector2(0.0907871, 0.046515)
shape = SubResource("RectangleShape2D_8rqf6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s1gu6")
}

[connection signal="input_event" from="Interaction" to="." method="talked_to"]
[connection signal="mouse_entered" from="Interaction" to="." method="hovering_character"]
[connection signal="mouse_exited" from="Interaction" to="." method="not_hovering_character"]
